# WKDocker

./: .gitignore  Makefile  README.md
applet/: CMakeLists.txt  configsettings.cpp  configsettings.h  constants.cpp  constants.h  dockerdaemon.cpp  dockerdaemon.h  main.cpp  trayitem.cpp  trayitem.h
applet/dbus-service/: org.andtru.wkdocker.service.in
kwin_script/: Makefile  metadata.json
kwin_script/WKDocker/: metadata.json
kwin_script/contents/code/: main.js
